Changed all tables with the styled-table style, they weren't mobile friendly. My fix should make the current tables throughout the website work on mobile. Check Ticket DX363 for solution for future editing/making of tables

--- a/_sass/style.scss
+++ b/_sass/style.scss
@@ -618,6 +618,10 @@ footer {
     }
 }
 
+.mobile-table {
+    overflow-x: auto;
+}
+
 .card {
     overflow: hidden;
     & > div {
